Refactor CSS styles for improved layout, responsiveness, and organization

--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -26,10 +26,10 @@
       <p class="card__author-name">Greg Hooper</p>
     </address>
   </article>
-
-  <div class="attribution">
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/stevensuna">Steven</a>.
-  </div>
+  </footer>
 </body>
 </html>
