feat: ✨ Add Blog Preview Card Component and remove attribution section for cleaner layout

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
                     </div>
                 </article>
                 <!-- More project cards here -->
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./blog-preview-card-main/screenshot.png" alt="Blog Preview Card Component">
+                        </div>
+                        <div class="card-content">
+                            <h3>Blog Preview Card Component</h3>
+                            <p>A responsive blog preview card component built with HTML and CSS</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="https://stevensuna.github.io/fem/blog-preview-card-main/index.html" class="btn">Live Demo</a>
+                            <a href="https://github.com/stevensuna/fem/tree/main/blog-preview-card-main" class="btn">Code</a>
+                        </div>
+                    </div>
+                </article>
+                
             </div>
         </section>
 
