--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -9,16 +9,42 @@
   <title>Social links profile</title>  
 </head>
 <body>
+  <!-- Background wrapper -->
+  <div class="background-pattern">
+    <!-- Main content area -->
+    <main>
+      <!-- Profile card component -->
+      <article class="card">
+        <!-- Profile header with avatar -->
+        <header class="card__header">
+          <figure class="card__avatar avatar">
+            <img 
+              src="assets/images/avatar-jessica.jpeg" 
+              alt="Jessica Randall's avatar" 
+              class="avatar__image"
+            >
+          </figure>
+        </header>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+        <!-- Profile information section -->
+        <section class="card__profile-info profile-info">
+          <h1 class="profile-info__name">Jessica Randall</h1>
+          <p class="profile-info__location">London, United Kingdom</p>
+          <p class="profile-info__description">"Front-end developer and avid reader."</p>
+        </section>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram 
-  
+        <!-- Social links navigation -->
+        <nav class="card__social">
+          <ul class="social__list">
+            <li><a href="#" class="button button--github">GitHub</a></li>
+            <li><a href="#" class="button button--frontend-mentor">Frontend Mentor</a></li>
+            <li><a href="#" class="button button--linkedin">LinkedIn</a></li>
+            <li><a href="#" class="button button--twitter">Twitter</a></li>
+            <li><a href="#" class="button button--instagram">Instagram</a></li>
+          </ul>
+        </nav>
+      </article>
+    </main>
+  </div>  
 </body>
 </html>
