refactor: 🎨 Change avatar section from div to section for semantic clarity

--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -12,7 +12,7 @@
   <!-- Main content area -->
   <main class="card">
     <!-- Profile avatar -->
-    <div class="card__avatar-section">
+    <section class="card__avatar-section">
       <figure class="avatar">
         <img 
           src="assets/images/avatar-jessica.jpeg" 
@@ -20,7 +20,7 @@
           class="avatar__image"
         >
       </figure>
-    </div>
+    </section>
 
     <!-- Profile information section -->
     <section class="card__profile-info profile-info">
