--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -2,40 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css">
-  <title>Social links profile</title>  
+  <title>Social links profile</title>
 </head>
 <body>
-  <!-- Main content area -->
-  <main class="card">
-    <!-- Profile avatar -->
-    <section class="card__avatar-section">
-      <figure class="avatar">
-        <img 
-          src="assets/images/avatar-jessica.jpeg" 
-          alt="Jessica Randall's avatar" 
-          class="avatar__image"
+  <main class="profile-card">
+    <section class="profile-card__avatar-section">
+      <figure class="profile-card__avatar">
+        <img
+          src="assets/images/avatar-jessica.jpeg"
+          alt="Jessica Randall's avatar"
+          class="profile-card__avatar-image"
         >
       </figure>
     </section>
 
-    <!-- Profile information section -->
-    <section class="card__profile-info profile-info">
-      <h1 class="profile-info__name">Jessica Randall</h1>
-      <p class="profile-info__location">London, United Kingdom</p>
-      <p class="profile-info__description">"Front-end developer and avid reader."</p>
+    <section class="profile-card__info">
+      <h1 class="profile-card__name">Jessica Randall</h1>
+      <p class="profile-card__location">London, United Kingdom</p>
+      <p class="profile-card__bio">"Front-end developer and avid reader."</p>
     </section>
 
-    <!-- Social links navigation -->
-    <nav class="card__social">
-        <a href="#" class="card__social-link button button--github">GitHub</a>
-        <a href="#" class="card__social-link button button--frontend-mentor">Frontend Mentor</a>
-        <a href="#" class="card__social-link button button--linkedin">LinkedIn</a>
-        <a href="#" class="card__social-link button button--twitter">Twitter</a>
-        <a href="#" class="card__social-link button button--instagram">Instagram</a>
+    <nav class="profile-card__social-links">
+      <a href="#" class="profile-card__link profile-card__link--github">GitHub</a>
+      <a href="#" class="profile-card__link profile-card__link--frontend-mentor">Frontend Mentor</a>
+      <a href="#" class="profile-card__link profile-card__link--linkedin">LinkedIn</a>
+      <a href="#" class="profile-card__link profile-card__link--twitter">Twitter</a>
+      <a href="#" class="profile-card__link profile-card__link--instagram">Instagram</a>
     </nav>
   </main>
 </body>
