--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css">
+  <link rel="stylesheet" href="styles.css"> </head>
   <title>Social links profile</title>
-</head>
 <body>
   <main class="profile-card">
-    <figure class="profile-card__avatar">
-      <img
-      src="assets/images/avatar-jessica.jpeg"
-      alt="Jessica Randall's avatar"
-      class="profile-card__avatar-image"
-      >
-    </figure>
+    <section class="profile-card__avatar-section">
+      <figure class="profile-card__avatar">
+        <img
+          src="assets/images/avatar-jessica.jpeg"
+          alt="Jessica Randall's avatar"
+          class="profile-card__avatar-image"
+        >
+      </figure>
+    </section>
 
     <section class="profile-card__info">
       <h1 class="profile-card__name">Jessica Randall</h1>
