--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css"> </head>
+  <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css"> </head>
   <title>Social links profile</title>
 <body>
   <main class="profile-card">
