--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -3,34 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Jessica Randall's Profile Card">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css"> </head>
-  <title>Social links profile</title>
+  <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css">
+  <title>Profile Card</title>
+</head>
 <body>
-  <main class="profile-card">
-    <section class="profile-card__avatar-section">
-      <figure class="profile-card__avatar">
-        <img
-          src="assets/images/avatar-jessica.jpeg"
-          alt="Jessica Randall's avatar"
-          class="profile-card__avatar-image"
-        >
-      </figure>
-    </section>
+  <!-- Card Component -->
+  <article class="card">
+    <!-- Profile Info Component -->
+    <div class="card__profile">
+      <img 
+        class="card__avatar"
+        src="assets/images/avatar-jessica.jpeg"
+        alt="Jessica Randall"
+        width="88"
+        height="88"
+      >
+      <h1 class="card__title">Jessica Randall</h1>
+      <p class="card__subtitle">London, United Kingdom</p>
+      <p class="card__text">"Front-end developer and avid reader."</p>
+    </div>
 
-    <section class="profile-card__info">
-      <h1 class="profile-card__name">Jessica Randall</h1>
-      <p class="profile-card__location">London, United Kingdom</p>
-      <p class="profile-card__bio">"Front-end developer and avid reader."</p>
-    </section>
-
-    <nav class="profile-card__social-links">
-      <a href="#" class="profile-card__link profile-card__link--github">GitHub</a>
-      <a href="#" class="profile-card__link profile-card__link--frontend-mentor">Frontend Mentor</a>
-      <a href="#" class="profile-card__link profile-card__link--linkedin">LinkedIn</a>
-      <a href="#" class="profile-card__link profile-card__link--twitter">Twitter</a>
-      <a href="#" class="profile-card__link profile-card__link--instagram">Instagram</a>
-    </nav>
-  </main>
+    <!-- Links Component -->
+    <div class="card__links">
+      <a href="#" class="btn btn--github">GitHub</a>
+      <a href="#" class="btn btn--frontend">Frontend Mentor</a>
+      <a href="#" class="btn btn--linkedin">LinkedIn</a>
+      <a href="#" class="btn btn--twitter">Twitter</a>
+      <a href="#" class="btn btn--instagram">Instagram</a>
+    </div>
+  </article>
 </body>
 </html>
