refactor: 🎨 Update CSS variables and structure for improved clarity and consistency; fix asset paths in HTML

--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Jessica Randall's Profile Card">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <title>Profile Card</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
       >
       <h1 class="card__title">Jessica Randall</h1>
       <p class="card__subtitle">London, United Kingdom</p>
-      <p class="card__text">"Front-end developer and avid reader."</p>
+      <p class="card__text">Front-end developer and avid reader.</p>
     </div>
 
     <!-- Links Component -->
