--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -9,29 +9,29 @@
   <title>Profile Card</title>
 </head>
 <body>
-  <!-- Card Component -->
-  <article class="card">
-    <img 
-      class="card__avatar"
-      src="assets/images/avatar-jessica.jpeg"
-      alt="Jessica Randall"
-      width="88" 
-      height="88"
-    >
-    <h1 class="card__title">Jessica Randall</h1>
-    <p class="card__location">London, United Kingdom</p>
-    <p class="card__bio">Front-end developer and avid reader.</p>
+  <main>
+    <article class="card">
+      <img 
+        class="card__avatar"
+        src="assets/images/avatar-jessica.jpeg"
+        alt="Jessica Randall"
+        width="88" 
+        height="88"
+      >
+      <h1 class="card__title">Jessica Randall</h1>
+      <p class="card__subtitle">London, United Kingdom</p>
+      <p class="card__text">Front-end developer and avid reader.</p>
 
-    <!-- Links Component -->
-    <nav class="links" aria-label="Social Links">
-      <ul class="links__list">
-        <li><a href="#" class="links__item">GitHub</a></li>
-        <li><a href="#" class="links__item">Frontend Mentor</a></li>
-        <li><a href="#" class="links__item">LinkedIn</a></li>
-        <li><a href="#" class="links__item">Twitter</a></li>
-        <li><a href="#" class="links__item">Instagram</a></li>
-      </ul>
-    </nav>
-  </article>
+      <nav class="card__links" aria-label="Social Links">
+        <ul>
+          <li><a href="#" class="btn btn--github">GitHub</a></li>
+          <li><a href="#" class="btn btn--frontend">Frontend Mentor</a></li>
+          <li><a href="#" class="btn btn--linkedin">LinkedIn</a></li>
+          <li><a href="#" class="btn btn--twitter">Twitter</a></li>
+          <li><a href="#" class="btn btn--instagram">Instagram</a></li>
+        </ul>
+      </nav>
+    </article>
+  </main>
 </body>
 </html>
