--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -3,35 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Jessica Randall's Profile Card">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <title>Profile Card</title>
+  <title>Social Links Profile</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="/social-links-profile-main/assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css">
 </head>
 <body>
-  <main>
-    <article class="card">
-      <img 
-        class="card__avatar"
-        src="assets/images/avatar-jessica.jpeg"
-        alt="Jessica Randall"
-        width="88" 
-        height="88"
-      >
-      <h1 class="card__title">Jessica Randall</h1>
-      <p class="card__subtitle">London, United Kingdom</p>
-      <p class="card__text">Front-end developer and avid reader.</p>
+  <main class="profile-card">
+    <section class="profile-card__avatar-section">
+      <figure class="profile-card__avatar">
+        <img
+          src="assets/images/avatar-jessica.jpeg"
+          alt="Jessica Randall's avatar"
+          class="profile-card__avatar-image"
+        >
+      </figure>
+    </section>
 
-      <nav class="card__links" aria-label="Social Links">
-        <ul>
-          <li><a href="#" class="btn btn--github">GitHub</a></li>
-          <li><a href="#" class="btn btn--frontend">Frontend Mentor</a></li>
-          <li><a href="#" class="btn btn--linkedin">LinkedIn</a></li>
-          <li><a href="#" class="btn btn--twitter">Twitter</a></li>
-          <li><a href="#" class="btn btn--instagram">Instagram</a></li>
-        </ul>
-      </nav>
-    </article>
+    <section class="profile-card__info">
+      <h1 class="profile-card__name">Jessica Randall</h1>
+      <p class="profile-card__location">London, United Kingdom</p>
+      <p class="profile-card__bio">"Front-end developer and avid reader."</p>
+    </section>
+
+    <nav class="profile-card__social-links">
+      <a href="#" class="profile-card__link profile-card__link--github">GitHub</a>
+      <a href="#" class="profile-card__link profile-card__link--frontend-mentor">Frontend Mentor</a>
+      <a href="#" class="profile-card__link profile-card__link--linkedin">LinkedIn</a>
+      <a href="#" class="profile-card__link profile-card__link--twitter">Twitter</a>
+      <a href="#" class="profile-card__link profile-card__link--instagram">Instagram</a>
+    </nav>
   </main>
 </body>
 </html>
