--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -7,8 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="/social-links-profile-main/assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="/social-links-profile-main/assets/css/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
   <main class="profile-card">
