fix: 🐛 Update index.html to replace 'Inter' font with 'Outfit'; enhance layout and button grouping for better UI

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Practice Showcase</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Include Materialize CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" type="image/svg+xml">
 </head>
 <body>
@@ -29,8 +27,10 @@
                         <p class="card__description">A responsive QR code component built with HTML and CSS</p>
                     </div>
                     <div class="card__actions">
-                        <a href="https://stevensuna.github.io/fem/qr-code-component-main/index.html" class="card__button">Live Demo</a>
-                        <a href="https://github.com/stevensuna/fem/tree/main/qr-code-component-main" class="card__button">Code</a>
+                        <div class="card__button-group">
+                            <a href="https://stevensuna.github.io/fem/qr-code-component-main/index.html" class="card__button">Live Demo</a>
+                            <a href="https://github.com/stevensuna/fem/tree/main/qr-code-component-main" class="card__button">View Code</a>
+                        </div>
                     </div>
                 </article>
 
@@ -43,8 +43,26 @@
                         <p class="card__description">A responsive blog preview card component built with HTML and CSS</p>
                     </div>
                     <div class="card__actions">
-                        <a href="https://stevensuna.github.io/fem/blog-preview-card-main/index.html" class="card__button">Live Demo</a>
-                        <a href="https://github.com/stevensuna/fem/tree/main/blog-preview-card-main" class="card__button">Code</a>
+                        <div class="card__button-group">
+                            <a href="https://stevensuna.github.io/fem/blog-preview-card-main/index.html" class="card__button">Live Demo</a>
+                            <a href="https://github.com/stevensuna/fem/tree/main/blog-preview-card-main" class="card__button">View Code</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="card__image">
+                        <img src="../social-links-profile-main/screenshot.png" alt="Profile Card Component Preview">
+                    </div>
+                    <div class="card__content">
+                        <h3 class="card__title">Social Links Profile Card</h3>
+                        <p class="card__description">A responsive profile card component featuring social media links, hover effects, and smooth transitions.</p>
+                    </div>
+                    <div class="card__actions">
+                        <div class="card__button-group">
+                            <a href="https://stevensuna.github.io/fem/social-links-profile-main/" class="card__button">Live Demo</a>
+                            <a href="https://github.com/stevensuna/fem/tree/main/social-links-profile-main" class="card__button">View Code</a>
+                        </div>
                     </div>
                 </article>
             </div>
@@ -66,8 +84,5 @@
         <p class="footer__text">Created by <a href="https://github.com/stevensuna" class="footer__link">Steven</a></p>
         <p class="footer__text">Challenge solutions from <a href="https://www.frontendmentor.io" class="footer__link">Frontend Mentor</a></p>
     </footer>
-
-    <!-- Include Materialize JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
