fix: 🐛 Update image path in index.html for accurate display of profile card component

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <article class="card">
                     <div class="card__image">
-                        <img src="../social-links-profile-main/screenshot.png" alt="Profile Card Component Preview">
+                        <img src="./social-links-profile-main/screenshot.png" alt="Profile Card Component Preview">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Social Links Profile Card</h3>
