fix: 🐛 Update avatar image path in index.html and add new avatar.png for profile card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="profile-card__avatar-section">
       <figure class="profile-card__avatar">
         <img
-          src="/392.png"
+          src="/avatar.png"
           alt="Steven's avatar"
           class="profile-card__avatar-image"
         >
