fix: 🐛 Update bio in index.html to reflect new achievement as Ironman 70.3 finisher

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="profile-card__info">
       <h1 class="profile-card__name">Steven To</h1>
       <p class="profile-card__location">Ho Chi Minh, Vietnam</p>
-      <p class="profile-card__bio">"Front-end developer and avid reader."</p>
+      <p class="profile-card__bio">"Front-end developer and Ironman 70.3 finisher."</p>
     </section>
 
     <nav class="profile-card__social-links">
