fix: 🐛 Update omelette image path in index.html to use correct asset directory

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="recipe">
         <div class="recipe__image-container">
-            <img src="omelette-image.jpg" alt="Simple Omelette" class="recipe__image">
+            <img src="./assets/images/image-omelette.jpeg" alt="Simple Omelette" class="recipe__image">
         </div>
 
         <section class="recipe__summary">
