feat: ✨ Add custom font faces and implement responsive design adjustments in styles.css; update index.html for correct image path and stylesheet links

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -4,28 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Omelette Recipe</title>
+    <link rel="stylesheet" href="/recipe-page-main/assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&family=Young+Serif&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"> </head>
 <body>
     <main class="recipe">
-        <figure class="recipe__image-container">
-            <img src="./assets/images/image-omelette.jpeg" 
-                 alt="A perfectly cooked golden omelette on a plate" 
-                 class="recipe__image">
-        </figure>
+        <div class="recipe__image-container">
+            <img src="/recipe-page-main/assets/images/image-omelette.jpeg" alt="Simple Omelette" class="recipe__image">
+        </div>
 
-        <article class="recipe__summary">
+        <section class="recipe__summary">
             <h1 class="recipe__title">Simple Omelette Recipe</h1>
             <p class="recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-        </article>
+        </section>
 
         <section class="recipe__prep-time">
             <h2 class="recipe__prep-time-title">Preparation time</h2>
-            <ul class="recipe__prep-time-list" role="list">
+            <ul class="recipe__prep-time-list">
                 <li class="recipe__prep-time-item"><strong>Total:</strong> Approximately 10 minutes</li>
                 <li class="recipe__prep-time-item"><strong>Preparation:</strong> 5 minutes</li>
                 <li class="recipe__prep-time-item"><strong>Cooking:</strong> 5 minutes</li>
