--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Omelette Recipe</title>
+    <link rel="stylesheet" href="/recipe-page-main/assets/css/normalize.css">
     <link rel="stylesheet" href="/recipe-page-main/assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
